Problem dark mode responsive resolved

--- a/style.css
+++ b/style.css
@@ -128,3 +128,4 @@ a:logo {
     left : 20px;
     right : 20px;
   }
+  .orarioscuola {max-width: 100%}
